SF-295 sample4 fix  added overflow hidden to #bg-video

--- a/samples/sample-04/less/style.less
+++ b/samples/sample-04/less/style.less
@@ -37,6 +37,7 @@
 .content-23 {
   overflow: hidden;
     #bgVideo {
+	overflow: hidden;
         > video {
             position: absolute !important;
             top:0 !important;
