--- a/ui-kit/ui-kit-header/css/ui-kit-styles.css
+++ b/ui-kit/ui-kit-header/css/ui-kit-styles.css
@@ -1748,6 +1748,7 @@ body .colapsed-menu::-webkit-scrollbar {
 }
 .header-5 .navbar .navbar-search input[type="text"]:-moz-placeholder {
   color: #ffffff;
+  opacity: 1;
 }
 .header-5 .navbar .navbar-search input[type="text"]::-moz-placeholder {
   color: #ffffff;
@@ -2365,6 +2366,7 @@ body .colapsed-menu::-webkit-scrollbar {
 }
 .header-6-sub .signup-form form .form-control:-moz-placeholder {
   color: #34495e;
+  opacity: 1;
 }
 .header-6-sub .signup-form form .form-control::-moz-placeholder {
   color: #34495e;
@@ -3639,6 +3641,7 @@ body .colapsed-menu::-webkit-scrollbar {
 .header-11-sub .signup-form form input[type="text"]:-moz-placeholder,
 .header-11-sub .signup-form form input[type="password"]:-moz-placeholder {
   color: #2c3e50;
+  opacity: 1;
 }
 .header-11-sub .signup-form form input[type="text"]::-moz-placeholder,
 .header-11-sub .signup-form form input[type="password"]::-moz-placeholder {
